--- a/beers/templates/beers/validate.html
+++ b/beers/templates/beers/validate.html
@@ -7,16 +7,26 @@
 
 {% block scripts %}
   <script type="text/javascript" src="{% static 'jquery/dist/jquery.min.js' %}"></script>
-  {% comment %}{% include 'autocomplete_light/static.html' %}{% endcomment %}
+  <script type="text/javascript" src="{% static 'js-cookie/src/js.cookie.js' %}"></script>
   {{ form.media }}
+  <script>
+  function csrfSafeMethod(method) {
+    // these HTTP methods do not require CSRF protection
+    return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+  }
+  $.ajaxSetup({
+    beforeSend: function(xhr, settings) {
+      var csrftoken = Cookies.get('csrftoken');
+      if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+        xhr.setRequestHeader("X-CSRFToken", csrftoken);
+      }
+    }
+  });
+  </script>
   <script>
   (function(exports) {
     var currentSearch = -1;
     var currentResult = -1;
-
-    function getCSRF() {
-
-    }
 
     function sendContent(uvId, content) {
       var url = "{% url 'update-checkin' contest.id 0 %}";
